TestCases/Errors/Haversine/observations/sst/win_07_obs.spm
obs r14-c7 0.000867924453840543
obs r15-c7 0.000713775874375446
obs r13-c8 0.00191342527785706
obs r14-c8 0.000753428219290001
obs r15-c8 0.000713775874375446
obs r13-c9 0.00333558318928244
obs r13-c10 0.000561377245508982
obs r5-c13 0.0197797619047619
obs r4-c14 0.0193684210526316
obs r5-c14 0.0274037969743505
obs r5-c15 0.0249883040935673
obs r6-c15 0.037
obs r5-c16 0.00555555555555556
obs r8-c17 0.00701754385964912
obs r9-c17 0.00701754385964912
obs r8-c18 0.011124613787392
obs r9-c18 0.0161669019386411
obs r7-c19 0.0033909752454197
obs r8-c19 0.00761274811168415
obs r9-c19 0.00683369472643658
obs r10-c19 0.0137272625448029
obs r8-c20 0.00364443338161335
obs r9-c20 0.00449015068356505
obs r10-c20 0.00302761306365307
obs r11-c20 0.00291375291375291
error_value r14-c7 0.2
error_value r15-c7 0.2
error_value r13-c8 0.2
error_value r14-c8 0.2
error_value r15-c8 0.2
error_value r13-c9 0.2
error_value r13-c10 0.2
error_value r5-c13 0.2
error_value r4-c14 0.2
error_value r5-c14 0.2
error_value r5-c15 0.2
error_value r6-c15 0.2
error_value r5-c16 0.2
error_value r8-c17 0.2
error_value r9-c17 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r7-c19 0.2
error_value r8-c19 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r8-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
error_value r11-c20 0.2
